# ising-model

./: CMakeLists.txt  README.md
src/: BufferedBitmap.cpp  BufferedBitmap.hpp  CMakeLists.txt  Ising.cpp  Ising.hpp  MainApp.cpp  MainApp.hpp  MainFrame.cpp  MainFrame.hpp  wxChartCtrl.cpp  wxChartCtrl.hpp
